project(epoolhttp)
ADD_DEFINITIONS(-std=c++11)
aux_source_directory(src/config SRC_CONFIG)
aux_source_directory(src/db SRC_DB)
aux_source_directory(src/GeoHttpDb SRC_GEOHTTP)
aux_source_directory(src/Http SRC_HTTP)
aux_source_directory(src/tools SRC_TOOLS)
set(src_list ${SRC_CONFIG} ${SRC_DB} ${SRC_GEOHTTP} ${SRC_HTTP} ${SRC_PROTO} ${SRC_TOOLS})
add_executable(epoolhttp ${src_list} src/EpoolHttp.cpp)
add_executable(test_cbuffer ${src_list} test/test_cbuffer.cpp)
target_link_libraries(epoolhttp db boost_regex json-c pthread)
target_link_libraries(test_cbuffer db boost_regex json-c pthread)
